--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ env:
     - CXX=g++-4.8
     - ENCRYPTION_LABEL: "02f48b5e2393"
     - COMMIT_AUTHOR_EMAIL: "patternfly-build@redhat.com"
+    - TRIGGER_REPO_SLUG: "patternfly/patternfly-atomic"
+    - TRIGGER_REPO_BRANCH: "master"
+
 
 addons:
   apt:
