Exposed the publish-ghpages script as an npm run script

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "postinstall": "node scripts/postinstall.js",
     "gulp": "gulp -- ",
+    "publish": "publish-ghpages.sh",
     "publish-travis": "publish-ghpages.sh -t public"
   },
   "license": "MIT",
