--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "scripts": {
     "postinstall": "node scripts/postinstall.js",
     "gulp": "gulp -- ",
-    "publish": "publish-ghpages.sh",
-    "publish-travis": "publish-ghpages.sh -t public"
+    "publish": "ghpages",
+    "publish-travis": "ghpages -t -f public"
   },
   "license": "MIT",
   "engines": {
@@ -39,6 +39,11 @@
     "bootstrap": "^4.0.0-alpha.5",
     "font-awesome": "^4.7.0",
     "gulp-sass": "^2.3.2",
-    "patternfly-eng-publish": "0.0.3"
+    "patternfly-eng-publish": "0.1.0-alpha.2"
+  },
+  "patternfly": {
+    "publish": {
+      "siteFolder": "public"
+    }
   }
 }
